// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Site: Text Basic Usage 1`] = `
Object {
  "docs": "Show inline text within an interface.",
  "html": "<span class=\\"drac-text drac-line-height drac-text-white\\"
  >The quick vampire jumps over the lazy human</span
>
",
  "react": "<Text>The quick vampire jumps over the lazy human</Text>;
",
  "title": "Usage",
}
`;

exports[`Site: Text Colors 1`] = `
Object {
  "docs": "Text can be customized to use any of the Dracula UI theme colors.",
  "html": "<div class=\\"drac-box\\">
  <div class=\\"drac-box\\">
    <span class=\\"drac-text drac-line-height drac-text-cyan\\">cyan</span>
  </div>
  <div class=\\"drac-box\\">
    <span class=\\"drac-text drac-line-height drac-text-green\\">green</span>
  </div>
</div>
",
  "react": "<Box>
  <Box>
    <Text color=\\"cyan\\">cyan</Text>
  </Box>
  <Box>
    <Text color=\\"green\\">green</Text>
  </Box>
</Box>;
",
  "title": "Colors",
}
`;

exports[`Site: Text Sizes 1`] = `
Object {
  "docs": "Text can be customize to use several different sizes.",
  "html": "<div class=\\"drac-box\\">
  <div class=\\"drac-box\\">
    <span class=\\"drac-text drac-text-xs drac-line-height drac-text-white\\"
      >xs</span
    >
  </div>
  <div class=\\"drac-box\\">
    <span class=\\"drac-text drac-text-sm drac-line-height drac-text-white\\"
      >sm</span
    >
  </div>
  <div class=\\"drac-box\\">
    <span class=\\"drac-text drac-line-height drac-text-white\\">md</span>
  </div>
  <div class=\\"drac-box\\">
    <span class=\\"drac-text drac-text-lg drac-line-height drac-text-white\\"
      >lg</span
    >
  </div>
</div>
",
  "react": "<Box>
  <Box>
    <Text size=\\"xs\\">xs</Text>
  </Box>
  <Box>
    <Text size=\\"sm\\">sm</Text>
  </Box>
  <Box>
    <Text size=\\"md\\">md</Text>
  </Box>
  <Box>
    <Text size=\\"lg\\">lg</Text>
  </Box>
</Box>;
",
  "title": "Sizes",
}
`;

exports[`Site: Text Weights 1`] = `
Object {
  "docs": "Text can be defined in different font weights.",
  "html": "<div class=\\"drac-box\\">
  <div class=\\"drac-box\\">
    <span class=\\"drac-text drac-line-height drac-text-white\\">normal</span>
  </div>
  <div class=\\"drac-box\\">
    <span class=\\"drac-text drac-text-semibold drac-line-height drac-text-white\\"
      >semibold</span
    >
  </div>
  <div class=\\"drac-box\\">
    <span class=\\"drac-text drac-text-bold drac-line-height drac-text-white\\"
      >bold</span
    >
  </div>
</div>
",
  "react": "<Box>
  <Box>
    <Text weight=\\"normal\\">normal</Text>
  </Box>
  <Box>
    <Text weight=\\"semibold\\">semibold</Text>
  </Box>
  <Box>
    <Text weight=\\"bold\\">bold</Text>
  </Box>
</Box>;
",
  "title": "Weights",
}
`;
